--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Wench Silence",
   "description": "Silence more than 22k+ wenches of the Internet.",
-  "author": "",
+  "author": "0x476c317463683372",
   "version": "1.0.0",
   "icons": {"16":"assets/img/icon16.png",
             "48":"assets/img/icon48.png",
